# Portfel-Tauri

./: CHANGELOG.md  INSTRUKCJA-GITHUB.txt  RAPORT-KONTROLI.md  README.md  TESTOWANIE.md  build-windows.bat  package-lock.json  package.json  windows-build.yml
.bootstrap/large/src/assets/: app.js.part-000  app.js.part-001  app.js.part-002  app.js.part-003  app.js.part-004  app.js.part-005  app.js.part-006  app.js.part-007  app.js.part-008  app.js.part-009  app.js.part-010  app.js.part-011  app.js.part-012  app.js.part-013  app.js.part-014  app.js.part-015  styles.css.part-000  styles.css.part-001  styles.css.part-002  styles.css.part-003  styles.css.part-004  styles.css.part-005
.bootstrap/parts/: part-00.b64  part-01.b64
.bootstrap/scripts/: write-small.part-00  write-small.part-01  write-small.part-02  write-small.part-03
.bootstrap/source/: .gitattributes.part-000
.bootstrap/source/.github/workflows/: windows-build.yml.part-000
.github/workflows/: windows-build.yml
ci/: source.part.000  source.part.001  source.part.002  source.part.003  source.part.004  source.part.0050  source.part.0051  source.part.0060  source.part.0061  source.part.0070  source.part.0071  source.part.0080  source.part.0090  source.part.0100  source.part.0101a
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: app.js  styles.css  tauri-bridge.js
src/data/: budget.json
tests/: frontend.test.mjs
